# pr_custom_component

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  hacs.json  info.md  pyproject.toml  setup.cfg
.github/workflows/: pull.yml  push.yml  semantic_release.yml
custom_components/pr_custom_component/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  entity.py  exceptions.py  manifest.json  sensor.py  strings.json  switch.py
custom_components/pr_custom_component/translations/: en.json
tests/: README.md  __init__.py  conftest.py  const.py  test_api.py  test_config_flow.py  test_init.py  test_switch.py
